--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,36 +1,60 @@
 # https://pre-commit.com/
+# More hooks available at:
+# https://pre-commit.com/hooks.html
+
+# INSTALL ON MAC:
 # brew install pre-commit
-# brew install tflint
-# pre-commit autoupdate
+
+# INSTALL ON WINDOWS:
+# pip install pre-commit
+
+# INSTALL hooks for this workspace
 # pre-commit install
-# pre-commit run --all-files
+
+exclude: '^modules/external/.*$'
+
 repos:
-  # TERRAFORM
+# TERRAFORM
+  # If running tf-docs it must be run first to avoid race condition relating to version constraints.
+  # BUG: terraform_docs hook conflicts when used more than once.
+  # Workaround with Python
+  - repo: local
+    hooks:
+    - id: Terraform docs
+      name: Terraform docs
+      entry: python examples/terraform-docs.py
+      language: system
+      types: [python]
+      always_run: true
+      pass_filenames: false
+
   - repo: https://github.com/antonbabenko/pre-commit-terraform
     rev: v1.74.1
     hooks:
-      - id: terraform_docs
-        args:
-          - --args=--lockfile=false
-          - --args=--config=.tfdocs-config.yml
+      # - id: terraform_docs
+      #  args:
+      #    - --args=--lockfile=false
+      #    - --args=--config=.tfdocs-config.yml
       - id: terraform_fmt
       - id: terraform_validate
+        # [^/]+: Exclude root module. Validation is done via examples/basic
+        # see https://github.com/antonbabenko/pre-commit-terraform#terraform_validate
+        exclude: |
+            (?x)^(
+                tests/.*|
+                [^/]+|
+            )$
       - id: terraform_tflint
-        args:
-          - '--args=--only=terraform_deprecated_interpolation'
-          - '--args=--only=terraform_deprecated_index'
-          - '--args=--only=terraform_unused_declarations'
-          - '--args=--only=terraform_comment_syntax'
-          - '--args=--only=terraform_documented_outputs'
-          - '--args=--only=terraform_documented_variables'
-          - '--args=--only=terraform_typed_variables'
-          - '--args=--only=terraform_module_pinned_source'
-          - '--args=--only=terraform_naming_convention'
-          - '--args=--only=terraform_required_version'
-          - '--args=--only=terraform_required_providers'
-          - '--args=--only=terraform_standard_module_structure'
-          - '--args=--only=terraform_workspace_remote'
-  #PYTHON
+        # Configure tflint by creating and updating the config file below.
+        args: ['--args=--config=__GIT_WORKING_DIR__/.tflint.hcl']
+      - id: terraform_tfsec
+        files: ^.*.tf$
+        # Configure tfsec by creating and updating the config file below.
+        args: ['--args=--config-file=__GIT_WORKING_DIR__/.tfsec-config.yml']
+      - id: terraform_checkov
+        # Configure checkov by creating and updating the config file below.
+        args: ['--args=--config-file __GIT_WORKING_DIR__/.checkov-config.yml']
+# Python
   - repo: https://github.com/psf/black
     rev: 22.6.0
     hooks:
@@ -39,23 +63,39 @@ repos:
     rev: 5.0.4
     hooks:
     - id: flake8
-  #PRECOMMIT
+# PRECOMMIT - GENERAL
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
     hooks:
       - id: check-added-large-files
-      - id: check-ast
-      - id: check-byte-order-marker
+        args: ['--maxkb=1024']
       - id: check-case-conflict
+      - id: check-json
+        exclude: tsconfig.json|devcontainer.json
+      # - id: pretty-format-json
+      #   exclude: tsconfig.json|package-lock.json|package.json
       - id: check-merge-conflict
-      - id: debug-statements
+      - id: check-symlinks
+      - id: check-toml
+      - id: check-vcs-permalinks
+      - id: check-xml
+      - id: check-yaml
+        exclude: cloud-init-ephemeral.yaml|cloud-init.yaml
       - id: detect-aws-credentials
         args: ['--allow-missing-credentials']
       - id: detect-private-key
       - id: end-of-file-fixer
       - id: mixed-line-ending
         args: ['--fix=lf']
-      # Causes PRs to main to fail
       - id: no-commit-to-branch
+        args: ['--branch', 'develop', '--branch', 'main', '--branch', 'master']
       - id: requirements-txt-fixer
       - id: trailing-whitespace
+  - repo: local
+    hooks:
+    -   id: no-vanilla-readme
+        name: Ensure README is updated
+        entry: "example content; edit to suit your module"
+        language: pygrep
+        types: [text]
+        files: README.md
